SpringBoot, JVM