@@ -1,5 +1,6 @@
 package com.gardenia.web.action;
 
+import cn.hutool.core.io.unit.DataSize;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -23,6 +24,13 @@ public class MemoryAction {
      *          Plugins -> spring-boot -> spring-boot:run
      *     3. 查询运行参数
      *          <a href="http://localhost:8080/jvm/memory" />
+     *     4. jar 启动
+     *          切换到java17 的环境， D:\Program Files\Java\corretto-17.0.10\bin
+     *          .\java.exe -jar -Xms8g -Xss256K -Xlog:gc -XX:+UseG1GC -Xmx30g D:\Gardenias\SpringBoot3Demo\first-micro-boot\first-micro-boot-web\target\first-micro-boot-web-0.0.1-SNAPSHOT.jar
+     *          大内存环境下，建议用G1
+     *          ms: 总内存
+     *          mx: 最大内存
+     *          ss: 空闲内存
      * @return 运行参数
      */
     @RequestMapping("memory")
@@ -30,8 +38,10 @@ public class MemoryAction {
         // 获取运行时对象实例
         Runtime runtime = Runtime.getRuntime();
         return Map.of(
-                "MaxMemory", runtime.maxMemory(),
-                "TotalMemory", runtime.totalMemory(),
-                "FreeMemory", runtime.freeMemory());
+                // 一般为物理内存的 1 /4
+                "MaxMemory", DataSize.ofBytes(runtime.maxMemory()).toGigabytes() + "GB",
+                // 一般为物理内存的 1 / 64
+                "TotalMemory", DataSize.ofBytes(runtime.totalMemory()).toMegabytes() + "MB",
+                "FreeMemory", DataSize.ofBytes(runtime.freeMemory()).toMegabytes() + "MB");
     }
 }
